Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79138

Qt Excessive warnings for -Wnoexcept

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.14.1, 5.15.0 Alpha
    • 5.14.0 Alpha
    • Core: Other
    • None
    • Linux/Wayland
    • c496fee2a5b65fd1b0672923293db058486e350e (qt/qtbase/5.14)

    Description

      Compiling a software using Qt5.14 with GCC 7 results to excessive amount of warnings. Many 1000s

      I need to surround all Qt libraries includes with GCC diagnostics ignores for

      • sign-promo
      • noexcept

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            damienlefevre Damien LEFEVRE
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes