qSwap: suppress pedantic warning about noexcept being false

This warning is not in -Wall or -Wextra, but it happens in a single
place, so we can reasonably suppress it.

Fixes: QTBUG-79138
Change-Id: Ib5d667bf77a740c28d2efffd15ccb3f62cf8f431
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>